RNW-92 fixing mobile menu background color, changing cs-summaries to use description over truncated content

--- a/hugo/themes/hugo-hero-theme/assets/scss/components/_case-study.scss
+++ b/hugo/themes/hugo-hero-theme/assets/scss/components/_case-study.scss
@@ -33,7 +33,7 @@
             width: 100%;
             opacity: .9;
             display: none;
-            padding: 2rem;
+            padding: 1.25rem;
         }
     }
 
