--- a/hugo/themes/hugo-hero-theme/assets/scss/components/_main-menu-mobile.scss
+++ b/hugo/themes/hugo-hero-theme/assets/scss/components/_main-menu-mobile.scss
@@ -1,4 +1,4 @@
-$color-main: $primary;
+$color-main: #2D3264;
 $color-active: #ffffff;
 $color-link: #ffffff;
 
